[package]
name = "particles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.1", features = ["async-io", "ktx2", "zstd"] }
bevy_rapier3d = { version = "0.23.0", features = ["parallel", "serde", "serde-serialize", "simd-stable"] }
rand = "0.8.5"
